--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: docker-<<IMAGE_NAME>>
+name: docker-cproc
 
 on:
   push:
@@ -17,7 +17,7 @@ on:
 
 jobs:
   image:
-    name: docker-<<IMAGE_NAME>>
+    name: docker-cproc
     runs-on: ubuntu-20.04
     steps:
       - name: "📥 Checkout Code"
